infra/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverse-proxy
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      containers:
        - name: nginx
          # Need to replace TAG with the actual tag of the custom-nginx image
          image: custom-nginx:$TAG
          ports:
            - containerPort: 80
        - name: tcpdump
          image: corfr/tcpdump  # This is an example image that contains tcpdump
          command: ["/usr/sbin/tcpdump"]
          args: ["-i", "any", "udp", "port", "53"]
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
