infra/reverse-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress 
spec:
  ingressClassName: nginx
  rules:
  - host: "*.hello-test.internal"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reverse-proxy
            port: 
              number: 80
